RESOLVED FIXED35997
Webkit doesn't build with workers on and database off
https://bugs.webkit.org/show_bug.cgi?id=35997
Summary Webkit doesn't build with workers on and database off
Noam Rosenthal
Reported 2010-03-10 17:26:14 PST
This was tested on the Qt version, but might be applicable elsewhere When building webkit with --no-database, but without --no-workers, the build fails in WorkerThread.cpp line 188
Attachments
Proposed patch (1.72 KB, patch)
2010-03-11 10:00 PST, Kent Hansen
no flags
Kent Hansen
Comment 1 2010-03-11 09:35:56 PST
I could make it compile by adding a few #if ENABLE(DATABASE). It looks like those were missed in r53595, since the patch does have DATABASE guards in other places. Anyways, this code is not Qt-specific.
Kent Hansen
Comment 2 2010-03-11 10:00:21 PST
Created attachment 50513 [details] Proposed patch
WebKit Commit Bot
Comment 3 2010-03-12 06:53:15 PST
Comment on attachment 50513 [details] Proposed patch Clearing flags on attachment: 50513 Committed r55896: <http://trac.webkit.org/changeset/55896>
WebKit Commit Bot
Comment 4 2010-03-12 06:53:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.