2010-03-12  Kent Hansen  <kent.hansen@nokia.com>

Reviewed by Darin Adler.

        Webkit doesn't build with workers on and database off
        https://bugs.webkit.org/show_bug.cgi?id=35997

        Added missing ENABLE(DATABASE) guards.

        * workers/WorkerThread.cpp:
        (WebCore::WorkerThreadShutdownStartTask::performTask):

Canonical link: https://commits.webkit.org/47191@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55896 268f45cc-cd09-0410-ab3c-d52691b4dbfc